scss support + fix overflowing padding on mobile
I still hate that I only had to install ONE dependency to fix like three months of issues

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -90,8 +90,8 @@ html {
     }
 
     .padding-div {
-        padding-left: calc(20vw - 80px);
-        padding-right: calc(20vw - 80px);
+        padding-left: calc(20vw - 60px);
+        padding-right: calc(20vw - 60px);
     }
 
     .banner-img {
